--- a/themes/genesis-base-child-theme/assets/scss/partials/blocks/core/_blocks-core-columns.scss
+++ b/themes/genesis-base-child-theme/assets/scss/partials/blocks/core/_blocks-core-columns.scss
@@ -24,6 +24,10 @@
 
           > *:last-child {
                margin-bottom: 0;
+
+               &.wp-block-image img {
+                    margin-bottom: 0;
+               }
           }
 
           @include media( 'mobile+' ) {
