--- a/themes/genesis-base-child-theme/assets/scss/partials/blocks/core/_blocks-core-group.scss
+++ b/themes/genesis-base-child-theme/assets/scss/partials/blocks/core/_blocks-core-group.scss
@@ -59,4 +59,8 @@
                @include spacing( 'vertical', null );
           }
      }
+
+     .max-width-block__interior > *:last-child {
+          margin-bottom: 0;
+     }
 }
