--- a/themes/genesis-base-child-theme/assets/scss/partials/blocks/core/_blocks-core-media-text.scss
+++ b/themes/genesis-base-child-theme/assets/scss/partials/blocks/core/_blocks-core-media-text.scss
@@ -14,6 +14,10 @@
           &__content {
                padding: 0 0 0 50px;
 
+               > *:last-child {
+                    margin-bottom: 0;
+               }
+
                @include media( 'mobile' ) {
                     padding: 0;
                }
@@ -67,6 +71,7 @@
                          grid-column: 1;
                          -ms-grid-row: 1;
                          grid-row: 1;
+                         margin-bottom: $base-margin;
                     }
 
                     &__content {
@@ -74,6 +79,7 @@
                          grid-column: 1;
                          -ms-grid-row: 2;
                          grid-row: 2;
+                         padding: 0 !important;
                     }
                }
           }
